force-app/main/default/objects/AdminAuditLog__c/AdminAuditLog__c.object-meta.xml
<CustomObject>
    <label>Admin Audit Log</label>
    <pluralLabel>Admin Audit Logs</pluralLabel>
    <nameField>
        <label>Admin Audit Log Name</label>
        <type>AutoNumber</type>
        <displayFormat>AAL-{0000000}</displayFormat>
    </nameField>
    <description>Stores audit trail entries captured from SetupAuditTrail by AdminTrack</description>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>