force-app/main/default/objects/AdminAuditLog__c/fields/BatchRunDate__c.field-meta.xml
<CustomField>
    <fullName>BatchRunDate__c</fullName>
    <label>Batch Run Date</label>
    <type>DateTime</type>
</CustomField>