force-app/main/default/objects/AdminAuditLog__c/fields/ExcludedCount__c.field-meta.xml
<CustomField>
    <fullName>ExcludedCount__c</fullName>
    <label>Excluded Count</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>0</scale>
</CustomField>