force-app/main/default/objects/AdminAuditLog__c/fields/SentToSlack__c.field-meta.xml
<CustomField>
    <fullName>SentToSlack__c</fullName>
    <label>Sent to Slack</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Whether a Slack notification was sent for this audit entry</description>
</CustomField>