force-app/main/default/objects/AdminAuditLog__c/fields/SlackSentDate__c.field-meta.xml
<CustomField>
    <fullName>SlackSentDate__c</fullName>
    <label>Slack Sent Date</label>
    <type>DateTime</type>
    <description>Timestamp when the Slack notification was sent</description>
</CustomField>