force-app/main/default/objects/AdminAuditLog__c/fields/TotalChanges__c.field-meta.xml
<CustomField>
    <fullName>TotalChanges__c</fullName>
    <label>Total Changes</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>0</scale>
</CustomField>